# EPFL_internship

./: README.md  amazon.md  overview.md  tools.md
amazon/minio_exp/: Backend.cpp  CMakeLists.txt  TestAll.cpp
amazon/minio_exp/examples/: CMakeLists.txt  TestAll.cc  backend.h  finish.cpp  refresh.cpp  setup.cpp  test.cpp
amazon/minio_exp/report/: report.txt  result.csv
amazon/s3_exp/: CMakeLists.txt  backend.cpp  backend.h  finish.cpp  hello-world.cpp  refresh.cpp  setup.cpp  test.cpp  test.txt
amazon/s3_exp/backend/: CMakeLists.txt  main.c
amazon/s3_exp/backend/bld/: CMakeCache.txt  Makefile  app  cmake_install.cmake
amazon/s3_exp/backend/bld/lib/: Makefile  cmake_install.cmake
amazon/s3_exp/backend/lib/: CMakeLists.txt  backend.cpp  backend.h
amazon/s3_exp/bld/: CMakeCache.txt  Makefile  app  cmake_install.cmake  test.txt  test1.txt
amazon/s3_exp/report/: report.txt  report_nod.txt  report_rw.txt  result.csv  result_nod.csv  result_rw.csv
auxiliary/: commented_julea_example.c  hello_world  listing  listing.c  object_example.c  plugin  plugin.c  posix.c  remote  remote.c  script.sh  sds.conf
minio_exp/: CMakeLists.txt
oio-sds/: main.c
oio-sds/cluster/module/: expr.lex.c  expr.yacc.c  expr.yacc.h  oio-daemon
oio-sds/core/: CMakeLists.txt  CTestTestfile.cmake  Makefile  client_variables.c  client_variables.h  cmake_install.cmake  exp  exp.c  lb_variables.c  lb_variables.h  liboiocore.so.0  liboiocore.so.0.0.0  liboiosds.so.0  liboiosds.so.0.0.0  oio_core.h  oio_sds.h  oiodir.h  oiolb.h  oiovar.h  tool_roundtrip  tool_sdk  tool_sdk_noconf
oio-sds/events/: events_variables.c  events_variables.h
oio-sds/meta0v2/: oio-meta0-client  oio-meta0-server
oio-sds/meta1v2/: oio-meta1-server
oio-sds/meta2v2/: autogen.h  autogen_codec.c  autogen_storage.c  meta2_variables.c  meta2_variables.h  oio-meta2-server
oio-sds/metautils/asn1c/: AddrInfo.c  AddrInfo.h  BaseVersion.c  BaseVersion.h  M2V2Alias.c  M2V2Alias.h  M2V2Bean.c  M2V2Bean.h  M2V2BeanSequence.c  M2V2BeanSequence.h  M2V2Chunk.c  M2V2Chunk.h  M2V2ContentHeader.c  M2V2ContentHeader.h  M2V2Property.c  M2V2Property.h  Makefile.am.sample  Message.c  Message.h  Meta0Info.c  Meta0Info.h  Meta0InfoSequence.c  Meta0InfoSequence.h  NamespaceInfo.c  NamespaceInfo.h  Parameter.c  Parameter.h  ParameterSequence.c  ParameterSequence.h  Row.c  Row.h  RowField.c  RowField.h  RowFieldSequence.c  RowFieldSequence.h  RowFieldType.c  RowFieldType.h  RowFieldValue.c  RowFieldValue.h  RowName.c  (+19 more)
oio-sds/metautils/lib/: common_variables.c  common_variables.h
oio-sds/proxy/: oio-proxy  proxy_variables.c  proxy_variables.h
oio-sds/rdir/: oio-rdir-server  rdir_variables.c  rdir_variables.h
oio-sds/resolver/: resolver_variables.c  resolver_variables.h
oio-sds/server/: server_variables.c  server_variables.h
oio-sds/sqliterepo/: sqliterepo_remote_variables.c  sqliterepo_remote_variables.h  sqliterepo_variables.c  sqliterepo_variables.h
oio-sds/tests/func/: test_oio_cluster  test_oio_cs  test_oio_dir  test_old_c_api  test_weird_chars
oio-sds/tests/unit/: test_addr  test_cache_lru  test_core_sysstat  test_events_beanstalkd  test_events_queue  test_gba  test_gridd_client  test_gridd_client_pool  test_lb  test_lrutree  test_meta1_backend  test_meta2_backend  test_network_server  test_nsinfo  test_oio_ext  test_oio_url  test_sqliterepo_cache  test_sqliterepo_election  test_sqliterepo_repo  test_sqliterepo_version  test_stats_holder  test_stg_policy  test_str  test_svc_policy  test_variable_period
oio-sds/tools/: oio-bootstrap.py  oio-file-tool  oio-lb-benchmark  oio-tool  oio-zk-harass
oio-sds/tools/event-benchmark/: oio-event-benchmark
paper/: JULEA.tex  paper.bib
random/libApp/: CMakeLists.txt  main.c
random/libApp/bld/: CMakeCache.txt  Makefile  app  cmake_install.cmake
random/libApp/bld/foo/: Makefile  cmake_install.cmake
random/libApp/foo/: CMakeLists.txt  foo.cpp  foo.h
readings/: amazon.md  presentation.odp  presentation.pptx
scripts/: build_minio.sh  exit.sh  report_plots.py  transfer.sh
